--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+@font-face {
+  font-family: 'Pretendard Regular';
+  font-weight: 400;
+  src: local('Pretendard-Regular'), url('./fonts/Pretendard-Regular.woff2') format('woff2');
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Pretendard Regular' !important;
 }
-
 html,
 body,
 #root {
