--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Pretendard Regular' !important;
-  font-size: 14px !important;
+  font-size: 14px;
 }
 html,
 body,
