--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,6 @@
   font-family: 'Pretendard Regular' !important;
   font-size: 14px;
 }
-html,
-body,
-#root {
-  background-color: #f7f8fb;
+html {
+  background-color: inherit;
 }
